fix: lisskins buff tags z-index

--- a/src/css/lisskins_styles.css
+++ b/src/css/lisskins_styles.css
@@ -6,7 +6,7 @@
 	left: 8px;
 	margin-top: 2px;
 	position: absolute;
-	z-index: 100;
+	z-index: 30;
 }
 
 .betterfloat-big-a {
